tests/NormalTests/paczka1/fuzzy1/75634910.err
Error in line 3: DxnDPE S785 42,5
Error in line 5: DxnDPE S402 97,0
Error in line 6: cxC6f A930 68,3
Error in line 10: cxC6f A981 75,0
Error in line 11: pZlE A930 46,6
Error in line 17: DxnDPE S785 87,5
Error in line 8: q1eD8 S402 30,0
Error in line 39: S402 A981 -1,5
